--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jspdf-html2canvas": "^1.4.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "urix": "^0.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
