--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/router": "~12.2.2",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.0",
+    "html2pdf-jspdf2": "^0.1.2",
     "jquery": "^3.6.0",
     "jspdf": "^2.3.1",
     "jspdf-html2canvas": "^1.4.9",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.4",
     "tslib": "^2.2.0",
     "urix": "^0.1.0",
     "zone.js": "~0.11.4"
