--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jspdf": "^2.3.1",
     "jspdf-html2canvas": "^1.4.9",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.4",
     "tslib": "^2.2.0",
     "urix": "^0.1.0",
     "zone.js": "~0.11.4"
