--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.2",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.0",
+    "chokidar": "^3.5.2",
     "html2pdf-jspdf2": "^0.1.2",
     "jquery": "^3.6.0",
     "jspdf": "^2.3.1",
