--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sweetalert2": "^11.1.4",
     "tslib": "^2.2.0",
     "urix": "^0.1.0",
+    "xlsx": "^0.17.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
