--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jspdf": "^2.3.1",
     "jspdf-html2canvas": "^1.4.9",
     "ng2-search-filter": "^0.5.1",
+    "ngx-countdown": "^12.0.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.4",
     "tslib": "^2.2.0",
