Added video modules

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/@videogular/ngx-videogular/fonts/videogular.css",
+   "src/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
