--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.2.2",
     "@angular/router": "~12.2.2",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@videogular/ngx-videogular": "^4.1.0",
     "bootstrap": "^5.1.0",
     "chokidar": "^3.5.2",
     "html2pdf-jspdf2": "^0.1.2",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "~12.2.2",
     "@angular/cli": "~12.2.2",
     "@angular/compiler-cli": "~12.2.2",
+    "@types/core-js": "^2.5.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
