--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/@videogular/ngx-videogular/fonts/videogular.css",
-   "src/styles.scss"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
