--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "chokidar": "^3.5.2",
     "html2pdf-jspdf2": "^0.1.2",
     "jquery": "^3.6.0",
+    "jQuery": "^1.7.4",
     "jspdf": "^2.3.1",
     "jspdf-html2canvas": "^1.4.9",
     "ng2-search-filter": "^0.5.1",
     "ngx-countdown": "^12.0.1",
+    "ngx-embed-video": "^1.0.4",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.4",
     "tslib": "^2.2.0",
@@ -37,7 +39,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.2",
-    "@angular/cli": "~12.2.2",
+    "@angular/cli": "^12.2.3",
     "@angular/compiler-cli": "~12.2.2",
     "@types/core-js": "^2.5.5",
     "@types/jasmine": "~3.8.0",
