--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
-
   },
   "private": true,
   "dependencies": {
@@ -22,15 +21,19 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@videogular/ngx-videogular": "^4.1.0",
     "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
     "chokidar": "^3.5.2",
     "html2pdf-jspdf2": "^0.1.2",
     "jquery": "^3.6.0",
     "jQuery": "^1.7.4",
     "jspdf": "^2.3.1",
     "jspdf-html2canvas": "^1.4.9",
+    "ng2-charts": "^2.4.3",
     "ng2-search-filter": "^0.5.1",
     "ngx-countdown": "^12.0.1",
     "ngx-embed-video": "^1.0.4",
+    "ngx-qrcode2": "^9.0.0",
+    "ngx-webcam": "^0.3.2",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.4",
     "tslib": "^2.2.0",
