--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/router": "~12.2.2",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@videogular/ngx-videogular": "^4.1.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.1.0",
     "chart.js": "^2.9.4",
     "chokidar": "^3.5.2",
+    "font-awesome": "^4.7.0",
     "html2pdf-jspdf2": "^0.1.2",
     "jquery": "^3.6.0",
     "jQuery": "^1.7.4",
